[tool.poetry]
name = "geospatial-data-science"
version = "0.1.0"
description = "Applied Geospatial Data Science with Python"
authors = ["mirjam.kirchner <mirjam.kirchner@westnetz.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.4"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
pysal = "^24.1"
splot = "^1.1.5.post1"
geoplot = "^0.5.1"
geoviews = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
